[gd_scene load_steps=11 format=3 uid="uid://crtjwcss7cqfm"]

[ext_resource type="Script" path="res://Scripts/Obstacles/fan_platform.gd" id="1_avmu7"]
[ext_resource type="Texture2D" uid="uid://xinhrksl4rff" path="res://Assets/Traps/Fan/Off.png" id="1_b2kfs"]
[ext_resource type="Texture2D" uid="uid://cd2ny8n7su4v3" path="res://Assets/Traps/Fan/On (24x8).png" id="2_02rov"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v6uoo"]
atlas = ExtResource("2_02rov")
region = Rect2(0, 0, 24, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya07q"]
atlas = ExtResource("2_02rov")
region = Rect2(24, 0, 24, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qw17"]
atlas = ExtResource("2_02rov")
region = Rect2(48, 0, 24, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvskv"]
atlas = ExtResource("2_02rov")
region = Rect2(72, 0, 24, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_replt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_b2kfs")
}],
"loop": true,
"name": &"Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6uoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya07q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qw17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvskv")
}],
"loop": true,
"name": &"On",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_64xyq"]
size = Vector2(20, 53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2oiow"]
size = Vector2(20, 117)

[node name="Fan Platform" type="Node2D"]
script = ExtResource("1_avmu7")

[node name="JumpArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="JumpArea"]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_replt")
animation = &"On"
autoplay = "Off"
frame_progress = 0.283551

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpArea"]
position = Vector2(0, -26.5)
shape = SubResource("RectangleShape2D_64xyq")

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(0, -58.5)
shape = SubResource("RectangleShape2D_2oiow")

[connection signal="body_entered" from="JumpArea" to="." method="_on_jump_area_body_entered"]
[connection signal="body_exited" from="CollisionArea" to="." method="_on_collision_area_body_exited"]
